--- a/my_ml_backend/docker-compose.yml
+++ b/my_ml_backend/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - WORKERS=1
       - THREADS=8
       # specify the model directory (likely you don't need to change this)
-      - MODEL_DIR=/data/models
+      - MODEL_DIR=model-20250109
 
       # Specify the Label Studio URL and API key to access
       # uploaded, local storage and cloud storage files.
